# TopicDataTest

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
ConfigTopic/: CMakeLists.txt  ConfigTopic.cxx  ConfigTopic.h  ConfigTopic.idl  ConfigTopicPubSubTypes.cxx  ConfigTopicPubSubTypes.h
DataTransferService/: CMakeLists.txt
DataTransferService/DdsService/: DataHandler.cpp  DataHandler.h  DataObserver.cpp  DataObserver.h  DdsSubscriber.cpp  DdsSubscriber.h  SubscriberFactory.cpp  SubscriberFactory.h  main.cpp
DataTransferService/ThreadSafeQueue/: ThreadSafeQueue.h
DataTransferService/WsService/: AppComponent.h  ClientListener.cpp  WsServer.cpp  WsServer.h  WsSocketListener.h
DdsWsGateway/: CMakeLists.txt  DdsSubscriber.cpp  DdsSubscriber.h  main.cpp
DdsWsGateway/DataObserver/: DataCacher.cpp  DataCacher.h  DataObserver.cpp  DataObserver.h
DdsWsGateway/DdsService/: SubscriberFactory.cpp  SubscriberFactory.h
DdsWsGateway/Lib/Common/: DataCacher.cpp  DataCacher.h  Mappers.cpp  Mappers.h  Notifier.cpp
DdsWsGateway/Lib/DdsService/: AbstractSubscriber.h  ConfigSubscriber.cpp  ConfigSubscriber.h  Factory.cpp  Service.cpp  Service.h
DdsWsGateway/Lib/DdsService/Config/: Config.h
DdsWsGateway/Lib/WsService/: AppComponent.h  ClientListener.cpp  Controller.h  Group.h  Server.h  SocketListener.cpp
DdsWsGateway/Utilities/Common/: AdapterConfig.h  Generators.h  PackageAnalyser.cpp  PackageAnalyser.h
DdsWsGateway/Utilities/Common/ThreadSafeQueue/: ThreadSafeQueue.h
DdsWsGateway/Utilities/Dds/: Callbacks.h  Config.cpp  TestUtility.cpp  TestUtility.h
DdsWsGateway/Utilities/Dds/TestTopic/: TestTopic.idl  TestTopicPubSubTypes.cxx
DdsWsGateway/Utilities/Ws/: Callbacks.h
DdsWsGateway/WsService/: AppComponent.h  ClientListener.cpp  ClientListener.h  WsServer.h
DdsWsGatewayService/: CMakeLists.txt  main.cpp
DdsWsGatewayService/Lib/: CMakeLists.txt  DdsSubscriber.cpp  DdsSubscriber.h  Gateway.cpp  Gateway.h
DdsWsGatewayService/Lib/Common/: DataCacher.cpp  DataCacher.h  Mappers.cpp  Mappers.h  Notifier.cpp  Notifier.h
DdsWsGatewayService/Lib/DataObserver/: DataCacher.cpp  DataCacher.h  DataObserver.cpp  DataObserver.h  Mappers.cpp  Mappers.h
DdsWsGatewayService/Lib/DdsService/: AbstractSubscriber.h  ConfigSubscriber.cpp  ConfigSubscriber.h  DdsSubscriber.cpp  DdsSubscriber.h  Factory.cpp  Factory.h  Service.cpp  Service.h  SubscriberFactory.cpp  SubscriberFactory.h  SubscriberService.cpp  SubscriberService.h
DdsWsGatewayService/Lib/DdsService/Config/: Config.cpp  Config.h  Configure.cpp  Configure.h
DdsWsGatewayService/Lib/Notifier/: DataCacher.cpp  DataCacher.h  Mappers.cpp  Mappers.h  Notifier.cpp  Notifier.h
DdsWsGatewayService/Lib/WsService/: AdapterUnit.cpp  AdapterUnit.h  AppComponent.h  ClientListener.cpp  ClientListener.h  Controller.h  Group.cpp  Group.h  Server.cpp  Server.h  SocketListener.cpp  SocketListener.h  WsServer.cpp  WsServer.h  WsSocketListener.cpp  WsSocketListener.h
DdsWsGatewayService/Utilities/: CMakeLists.txt  DdsCommonClasses.cpp  DdsCommonClasses.h  DdsTestUtility.cpp  DdsTestUtility.h  MediateDto.h  PackageAnalyser.cpp  PackageAnalyser.h  WsCommonClasses.h  WsDto.h  WsTestUtility.cpp  WsTestUtility.h
DdsWsGatewayService/Utilities/Common/: Generators.cpp  MediateDto.h
DdsWsGatewayService/Utilities/Common/ThreadSafeQueue/: ThreadSafeQueue.h
DdsWsGatewayService/Utilities/Common/TimeConverter/: TimeConverter.cpp  TimeConverter.hpp
DdsWsGatewayService/Utilities/Dds/: Callbacks.h  Config.h  Configure.cpp  Configure.h  TestUtility.cpp  TestUtility.h
DdsWsGatewayService/Utilities/Dds/TestTopic/: TestTopic.cxx  TestTopic.h
DdsWsGatewayService/Utilities/Test/: DdsTestUtility.cpp  DdsTestUtility.h  WsTestUtility.cpp  WsTestUtility.h
DdsWsGatewayService/Utilities/TestTopic/: TestTopicPubSubTypes.h
DdsWsGatewayService/Utilities/TestUtilities/: CommonTestUtilities.cpp  CommonTestUtilities.h  DdsTestUtility.cpp  DdsTestUtility.h  WsTestUtility.cpp  WsTestUtility.h
DdsWsGatewayService/Utilities/ThreadSafeQueue/: ThreadSafeQueue.h
DdsWsGatewayService/Utilities/TimeConverter/: TimeConverter.cpp  TimeConverter.hpp
DdsWsGatewayService/Utilities/Ws/: Config.h  Configure.h  TestUtility.cpp  TestUtility.h
DdsWsGatewayUtilities/: CMakeLists.txt  DataObserver.h  DdsCommonClasses.h  DdsTestUtility.cpp  DdsTestUtility.h  PackageAnalyser.cpp  PackageAnalyser.h  WsCommonClasses.h  WsTestUtility.h
DdsWsGatewayUtilities/ThreadSafeQueue/: ThreadSafeQueue.h
PublisherProject/: CMakeLists.txt  Config.cpp  Config.h  Configure.cpp  Configure.h  DdsPublisher.cpp  DdsPublisher.h  Factory.cpp  Factory.h  PublisherFactory.cpp  PublisherFactory.h  Service.cpp  Service.h  main.cpp
SubscriberProject/: CMakeLists.txt  DataObserver.cpp  DataObserver.h  DdsSubscriber.cpp  DdsSubscriber.h  SubscriberFactory.cpp  SubscriberFactory.h  main.cpp
SubscriberProject/WsService/: AppComponent.h  ClientListener.cpp  ClientListener.h  Temp.h  WsServer.cpp  WsServer.h  WsSocketListener.cpp  WsSocketListener.h
TestDdsWsGateway/: CMakeLists.txt  Tests.cpp
TestDdsWsGateway/Helpers/: Utilities.cpp  Utilities.h
TestDdsWsGateway/Utilities/: DdsTestUtility.cpp  DdsTestUtility.h  WsTestUtility.cpp  WsTestUtility.h
TestService/: CMakeLists.txt  Tests.cpp
TypeTopicsDDS/: TypeTopics.cxx  TypeTopics.h  TypeTopics.idl  TypeTopicsPubSubTypes.cxx  TypeTopicsPubSubTypes.h  TypeTopicsTypeObject.cxx  TypeTopicsTypeObject.h
TypeTopicsDDS/DDSData/: DDSData.cxx  DDSData.h  DDSDataPubSubTypes.h  DDSDataTypeObject.cxx  DDSDataTypeObject.h
TypeTopicsDDS/DDSDataEx/: DDSDataEx.cxx  DDSDataEx.h  DDSDataExPubSubTypes.h  DDSDataExTypeObject.cxx  DDSDataExTypeObject.h
WsClient/: AppComponent.hpp  CMakeLists.txt  WSClient.cpp  WSClient.hpp  WSListener.cpp  WSListener.hpp  main.cpp
include/: CommonClasses.cpp  CommonClasses.h  DataHandler.cpp  DataHandler.h  DataObserver.cpp  DataObserver.h  DdsCommonClasses.h  PackageAnalysis.cpp  PackageAnalysis.h  TestUtility.h  WsCommonClasses.h  WsDto.h  WsTestUtility.h
